# nginx-at-scale

./: .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
app/backend/: .dockerignore  Cargo.toml  Dockerfile
app/backend/.cargo/: config.toml
app/backend/server/: Cargo.toml
app/backend/server/src/: db.rs  handlers.rs  main.rs  models.rs
app/frontend/: index.html  package-lock.json  package.json  vite.config.js
app/frontend/src/: App.jsx  api.js  index.css
app/frontend/src/pages/: Cart.jsx  Cart.module.css  ProductDetail.jsx  ProductDetail.module.css  ProductList.jsx  ProductList.module.css
benchmarks/conn-holder/: Cargo.toml
benchmarks/conn-holder/src/: main.rs
benchmarks/k6/: README.md  browse-products.js  browse-ui.js  cart-checkout.js  concurrency-ramp.js
benchmarks/wrk/: browse-ui.lua  product-list.lua  run-baseline.sh  static-assets.lua
deploy/firewall/: nftables.conf
deploy/systemd/: backend.service  lux.service
deploy/systemd/nginx.service.d/: hardening.conf
dev/: README.md  docker-compose.prod.yml  docker-compose.yml
docs/proposals/: post-layer-7-execution.md  post-layer-7-tuning-proposal.md
docs/sections/: 00-prerequisites.md  01-demo-app.md  02-baseline.md  03-layer-01-fd.md  04-layer-02-tcp.md  05-layer-03-events.md  06-layer-04-jemalloc.md  07-layer-05-tls.md  08-layer-06-aio.md  08-layer-06-io-uring.md  09-layer-07-numa.md  10-layer-08-dpdk.md  11-tiers.md  12-freebsd.md  13-results.md  14-kernel-build.md  15-security.md  layer-04-jemalloc.md  layer-06-aio.md  layer-08-dpdk.md
kernel/sysctl/: layer-01-fd-limits.conf  layer-02-tcp.conf  layer-08-hugepages.conf
nginx/: baseline.conf
nginx/sections/: layer-03-worker-events.conf  layer-05-tls.conf  layer-06-aio.conf  layer-07-numa.conf
results/: REPORT-TEMPLATE.md
scripts/: _lib.sh  apply-all-layers.sh  apply-baseline.sh  apply-layer-1.sh  apply-layer-2.sh  apply-layer-3.sh  apply-layer-4.sh  apply-layer-5.sh  apply-layer-6.sh  apply-layer-7.sh  apply-layer-8.sh  apply-tune-nginx.sh  apply-tuning-extras.sh  build-brotli-module.sh  concurrency-test.sh  generate-certs.sh  generate-report.sh  install-target.sh  load-test-bombardier.sh  load-test.sh  measure.sh  monitor.sh  probe-nics.sh  reset-baseline.sh  run-all-layers.sh  smoke-test.sh  snapshot.sh  tune-network-irq.sh  tune-network-rps.sh
